<resources>

    <string name="app_name">Livelo</string>

    <!-- Current Balance -->
    <string name="current_balance_title">SALDO ATUAL</string>
    <string name="current_balance_last_update">Atualizado em</string>

    <!-- Generic Error -->
    <string name="generic_error_login_title">Login</string>
    <string name="generic_error_login_desc">Por favor, faça o login a partir do seu aplicativo smartphone.</string>
    <string name="generic_error_all_title">Não foi possível\ncompletar a sua solicitação.</string>
    <string name="generic_error_all_desc">Por favor, tente novamente mais tarde.</string>
    <string name="generic_erro_button">ok</string>

    <!-- Validation Code -->
    <string name="validation_code_title">Gerar código\nde resgate</string>
    <string name="validation_code_renew">Toque para\ngerar novo código\nde resgate.</string>
    <string name="validation_code_error">Não foi\npossível gerar o código.\nTente novamente.</string>

    <!-- Go To App -->
    <string name="go_to_app_description">Abrir no smartphone</string>

    <!-- My Points Accumulated -->
    <string name="my_points_accumulated_title">ACÚMULO DOS</string>
    <string name="my_points_accumulated_subtitle">ÚLTIMOS 30 DIAS</string>

    <!-- Graphic Points -->
    <string name="graphic_points_title">ACÚMULO DOS</string>
    <string name="graphic_points_subtitle">ÚLTIMOS 3 MESES</string>
    <string name="graphic_points_empty">Você ainda não\npossui pontos.</string>


</resources>
