<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container_empty_state"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:visibility="gone">

    <android.support.wearable.view.WearableHeaderTextView
        style="@style/LiveloWearTheme.TextView.Graphic.Points.Title"
        android:layout_above="@+id/second_title"
        android:layout_centerHorizontal="true"
        android:text="@string/graphic_points_title" />

    <android.support.wearable.view.WearableHeaderTextView
        android:id="@+id/second_title"
        style="@style/LiveloWearTheme.TextView.Graphic.Points.Subtitle"
        android:layout_above="@+id/graphic_points_empty"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/graphic_points_subtitle" />

    <android.support.wearable.view.WearableHeaderTextView
        android:id="@+id/graphic_points_empty"
        style="@style/LiveloWearTheme.TextView.Graphic.Points.Empty"
        android:layout_marginTop="5dp"
        android:text="@string/graphic_points_empty" />

</RelativeLayout>